--- a/style.css
+++ b/style.css
@@ -18,5 +18,21 @@ body{
     display: flex;
     flex-direction: column;
     
+}
+.ecran{
+    width: 100%;
+    height: 100px;
+    background-color: white;
+    margin-bottom: 18px;
+    border-radius: px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 5px;
+    font-size: 25px;
+}
+.touches{
+    font-display: grid;
+    grid-template-columns: repeat(4,50px);
 
 }
