--- a/style.css
+++ b/style.css
@@ -16,15 +16,15 @@ body{
 .calculatrice{
     background-color: tomato;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;j
     
 }
 .ecran{
     width: 100%;
     height: 100px;
-    background-color: white;
-    margin-bottom: 18px;
-    border-radius: px;
+    background-color: rgb(59, 142, 153);
+    margin-bottom: 10px;
+    border-radius: 5px;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -34,5 +34,7 @@ body{
 .touches{
     font-display: grid;
     grid-template-columns: repeat(4,50px);
+    grid-template-rows:  repeat(5,50px);
+    grid-gap: 7px;
 
 }
