--- a/style.css
+++ b/style.css
@@ -11,18 +11,24 @@ body{
    justify-content: center;
    align-items: center;
    font-family: sans-serif;
+   background: rgb(34,193,195);
+   background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(175,134,45,1) 63%); 
 }
 
 .calculatrice{
-    background-color: tomato;
+    background-color: rgb(5, 1, 0);
     display: flex;
     flex-direction: column;
+    border-style: solid;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0.5px black;
     
 }
-.ecran{
+.visionage{
     width: 100%;
     height: 100px;
-    background-color: rgb(59, 142, 153);
+    background-color: rgb(71, 217, 236);
     margin-bottom: 10px;
     border-radius: 5px;
     display: flex;
@@ -31,10 +37,39 @@ body{
     padding: 5px;
     font-size: 25px;
 }
-.touches  {
+.marque  {
     display: grid;
     grid-template-columns: repeat(4,50px);
     grid-template-rows:  repeat(5,50px);
     grid-gap: 7px;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-bottom: 3px;
 
 }
+button{
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    background-color: f7F7F7;
+    box-shadow: 0 3px f999FFF;
+    font-size: 18px;
+}
+button:active{
+    box-shadow: 0 2px fa8a8aB;
+    transform: translate(2px);
+}
+button[data-abs="8"]{
+    background-color: rgb(228, 148, 0);
+    font-weight: bold;
+    color: rgb(8, 4, 12);
+}
+button[data-abs="13"]{
+    grid-column: span 2;
+    background-color: #37ff00;
+    font-weight: bold;
+    color: rgba(8, 4, 12, 0.993);
+    font-size: 30px;
+}
+
+
