--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-   max-width: 100vh;
+   max-width: 100vw;
    height: 100vh;
    display: flex; 
    justify-content: center;
@@ -25,7 +25,7 @@ body{
     box-shadow: 0.5px black;
     
 }
-.visionage{
+.ecran{
     width: 100%;
     height: 100px;
     background-color: rgb(71, 217, 236);
@@ -37,14 +37,11 @@ body{
     padding: 5px;
     font-size: 25px;
 }
-.marque  {
+.touches{
     display: grid;
     grid-template-columns: repeat(4,50px);
     grid-template-rows:  repeat(5,50px);
     grid-gap: 7px;
-    margin-left: 3px;
-    margin-right: 3px;
-    margin-bottom: 3px;
 
 }
 button{
@@ -59,12 +56,12 @@ button:active{
     box-shadow: 0 2px fa8a8aB;
     transform: translate(2px);
 }
-button[data-abs="8"]{
+button[data-key="8"]{
     background-color: rgb(228, 148, 0);
     font-weight: bold;
     color: rgb(8, 4, 12);
 }
-button[data-abs="13"]{
+button[data-key="13"]{
     grid-column: span 2;
     background-color: #37ff00;
     font-weight: bold;
