--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     box-shadow: 0.5px black;
     
 }
-.ecran{
+#ecran{
     width: 100%;
     height: 100px;
     background-color: rgb(71, 217, 236);
@@ -56,13 +56,13 @@ button:active{
     box-shadow: 0 2px fa8a8aB;
     transform: translate(2px);
 }
-button[data-key="8"]{
+#button_supprimer{
     background-color: rgb(228, 148, 0);
     font-weight: bold;
     color: rgb(8, 4, 12);
 }
-button[data-key="13"]{
-    grid-column: span 2;
+#button_egal{
+    grid-column: span 4;
     background-color: #37ff00;
     font-weight: bold;
     color: rgba(8, 4, 12, 0.993);
