--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     box-shadow: 0.5px black;
     
 }
-#ecran{
+ecran{
     width: 100%;
     height: 100px;
     background-color: rgb(71, 217, 236);
