--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,7 +10,7 @@
   }
   
   p::first-letter{
-    color: #023d6d;
+    color: #04070a;
     font-size: 80px;
     font-weight: bold;
     justify-content: center;
@@ -23,7 +23,7 @@
   }
   
   header {
-    background: #023d6d;
+    background: #000000;
     color: white;
     padding: 1rem;
     text-align: center;
@@ -36,10 +36,10 @@
     margin: 2rem auto;
     width: 40rem;
     max-width: 90%;
-    border: 1px solid #023d6d;
+    border: 1px solid #000000;
     border-radius: 10px;
     padding: 1rem;
-    color: #023d6d;
+    color: #000000;
   }
   
   #results {
@@ -49,12 +49,12 @@
   #calculator input {
     font: inherit;
     font-size: 3rem;
-    border: 2px solid #023d6d;
+    border: 2px solid #000000;
     width: 10rem;
     padding: 0.15rem;
     margin: auto;
     display: block;
-    color: #023d6d;
+    color: #000000;
     text-align: center;
   }
   
@@ -64,9 +64,9 @@
   
   #calculator button {
     font: inherit;
-    background: #023d6d;
+    background: #000000;
     color: white;
-    border: 1px solid #023d6d;
+    border: 1px solid #000000;
     padding: 1rem;
     cursor: pointer;
   }
@@ -77,8 +77,8 @@
   
   #calculator button:hover,
   #calculator button:active {
-    background: #084f88;
-    border-color: #084f88;
+    background: #000000;
+    border-color: #000000;
   }
   
   #calc-actions button {
