--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -29,6 +29,7 @@
     text-align: center;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     width: 100%;
+    box-shadow: 10px 5px 5px rgb(10, 9, 9);
   }
   
   #results,
@@ -40,10 +41,18 @@
     border-radius: 10px;
     padding: 1rem;
     color: #000000;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   }
   
+
   #results {
     text-align: center;
+    /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset; */
+  }
+  
+  .containerMine{
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(39, 10, 61, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+
   }
   
   #calculator input {
